[MultiTenant] Fix Tenant jtreg tests compilation falure. Add make dependency.